--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
       <script src="p5.play.js"></script>
-      <script src="JS/Food.js"></script>
+     
       <!-- The core Firebase JS SDK is always required and must be listed first -->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
@@ -36,6 +36,7 @@
         Initialize Firebase-->
 
       <link rel="stylesheet" type="text/css" href="style.css"/>
+      <script src="food.js"></script>
     </head>
     <body>
       <script src="sketch.js"></script>
